k8s/domains/accounts/infra/api/overlays/live/accounts-api-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: accounts-api-depl
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: accounts-api
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
