k8s/domains/accounts/infra/api/overlays/live/accounts-api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: accounts-api-public
spec:
  tls:
    certResolver: le
    domains:
      - main: api.tma.com

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: accounts-api-public-docs
spec:
  tls:
    certResolver: le
    domains:
      - main: api.tma.com
